# process_memory_tracker

./: .gitignore  Final_Report.md  README.md
src/UninitializedFreedDetector/: CMakeLists.txt  check  checkAssign.cpp  checkMem.cpp  uninitializedMem.cpp  uninitializedMem.hpp
src/leakDetector/: CMakeLists.txt  FileLeakDetector.cpp  FileLeakDetector.hpp  Makefile  MemLeakDetector.cpp  MemLeakDetector.hpp  displayFileLeak.cpp  displayFileLeak.hpp  displayMemLeak.cpp  displayMemLeak.hpp  leakDetector  leakDetector.cpp  leakDetector.hpp  main.cpp  test_file.cpp  wrapper.hpp
src/leakDetector/Output/: checkAssign_File.txt  checkAssign_Mem.txt  test1_File.txt  test1_Mem.txt  test_File.txt  test_Mem.txt
src/memStat/: CMakeCache.txt  CMakeLists.txt  Makefile  Mem.cpp  Mem.h  Mem.hpp  cmake_install.cmake  display.cpp  display.hpp  main.cpp  memStat  processMem.cpp  processMem.h  processMem.hpp  utils.cpp  utils.h  utils.hpp
src/overflowDetector/: MemOverflowDetector.cpp
src/test/: test  test.cpp  test1  test1.cpp  testUninitial.cpp  test_file.cpp  test_mem.cpp  test_memStat  test_memStat.cpp
